--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+#/projetos/reactjs/curriculosrv2/ https://frontsrv2.d3siwku701mbez.amplifyapp.com/
 
 # dependencies
 /node_modules
